// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Primary Button should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5BE59",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    style={
      Array [
        Object {
          "color": "#353434",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {
          "color": "#353434",
        },
      ]
    }
    type="bold"
  >
    Primary Button
  </Text>
</View>
`;

exports[`Button Primary Text Button should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFAFA",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    style={
      Array [
        Object {
          "color": "#353434",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {
          "color": "#353434",
        },
      ]
    }
    type="bold"
  >
    Primary Text Button
  </Text>
</View>
`;

exports[`Button Secondary Button should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#353434",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    style={
      Array [
        Object {
          "color": "#353434",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {
          "color": "#FAFAFA",
        },
      ]
    }
    type="bold"
  >
    Secondary Button
  </Text>
</View>
`;

exports[`Button Secondary Text Button should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFAFA",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    style={
      Array [
        Object {
          "color": "#353434",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {
          "color": "#A9A8A3",
        },
      ]
    }
    type="bold"
  >
    Secondary Text Button
  </Text>
</View>
`;
